kubernetes-manifests/kiwix/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kiwix
  namespace: kiwix
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kiwix
  template:
    metadata:
      labels:
        app: kiwix
    spec:
      containers:
        - name: kiwix
          image: ghcr.io/kiwix/kiwix-serve:3.7.0
          command: ["kiwix-serve"]
          args: ["--library", "/data/library.xml", "--monitorLibrary", "--port", "8080"]
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: kiwix-storage
              mountPath: /data
      volumes:
        - name: kiwix-storage
          persistentVolumeClaim:
            claimName: kiwix-pvc
