kubernetes-manifests/kiwix/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kiwix
  namespace: kiwix
spec:
  type: ClusterIP
  selector:
    app: kiwix
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
